@@ -3,6 +3,7 @@
 *******************************************************************************
 
 === 1.0.7 ===
+* Added lsp_setflag method.
 
 === 1.0.6 ===
 * Added lsp_limit method.
